syntax = "proto3";

option csharp_namespace = "Proto.V1";

message RequestTimeProto {
  optional string event_id = 1;
  optional string event_version = 2;
  optional string event_name = 3;
  optional string event_time = 4;
}